# Rusted-Workshop-Translation-API

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile.api  Dockerfile.cleanup  Dockerfile.coordinator  Dockerfile.file-worker  README.md  RELEASE.md  clear_cache.py  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.cjs  main.py  pyproject.toml  start_api.py  start_cleanup.py  start_worker.py  start_workers.py  test_coordinator_redis_fix.py  test_event_loop_fix.py
.github/workflows/: release.yml
api/: __init__.py  main.py
core/: __init__.py  config.py  rwmod.py  translate.py
core/agents/: __init__.py  translate.py  translate_style_analysis.py
core/prompts/: __init__.py  translate.md  translate_style.md
models/: __init__.py  file_task.py  task.py
scripts/: init_db.py  run_integration_test.ps1  run_integration_test.py  run_rwmod_localization_integration.py
services/: __init__.py  cache_service.py  rabbitmq_service.py  s3_service.py  task_manager.py
tests/: test_output_filename.py  test_source_hash_dedup.py  test_translate.py
utils/: __init__.py  config.py  filename.py  ini_lib.py  language.py  redis_lib.py  retry.py  zip_lib.py
utlis/: config.py  ini_lib.py  redis_lib.py
workers/: __init__.py  cleanup_worker.py  coordinator_worker.py  file_translation_worker.py  translation_worker.py
