[project]
name = "rusted-workshop-translation-api"
version = "0.1.0"
description = "Rusted Workshop 模组翻译 API 服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.0.10",
    "aioboto3>=13.0.0",
    "chardet>=5.2.0",
    "fastapi>=0.115.0",
    "kafka-python>=2.2.15",
    "openai>=1.109.1",
    "pika>=1.3.2",
    "pydantic>=2.11.9",
    "python-dotenv>=1.0.0",
    "redis>=6.4.0",
    "uvicorn>=0.30.0",
]
